--- a/src/DataAnalyst.ipynb
+++ b/src/DataAnalyst.ipynb
@@ -9,6 +9,7 @@
     "\n",
     "Every click, every view, every purchase on an e-commerce website tells a story.\n",
     "But can we truly understand what customers want, why they leave items in their cart, or what makes them hit 'buy'?\n",
+    "\n",
     "In this project, we embark on a journey to uncover the hidden patterns within millions of customer interactions, transforming raw data into actionable insights that can revolutionize online shopping experiences.\n",
     "\n",
     "## In this part of the project\n",
@@ -132,6 +133,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "94f2f508",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "---\n",
+    "<br>\n",
+    "<br>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "fa476a3d",
    "metadata": {},
    "source": [
@@ -250,6 +263,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1553527b",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "<br>\n",
+    "<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2833c7a5",
    "metadata": {},
    "source": [
@@ -362,6 +385,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a27e378c",
+   "metadata": {},
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a7704fbd",
    "metadata": {},
    "source": [
@@ -447,6 +478,14 @@
     "**What does this graph show?**: This graph displays the total monetary value of all purchases made each month.\n",
     "\n",
     "**Why is it important?**: Provides a high-level overview of the business's revenue performance and helps identify peak selling seasons or areas for improvement."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "028eb4b9",
+   "metadata": {},
+   "source": [
+    "<br>"
    ]
   },
   {
@@ -557,6 +596,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "44d5fd8b",
+   "metadata": {},
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4f26ad86",
    "metadata": {},
    "source": [
@@ -627,6 +674,16 @@
     "plt.xlim(min(daily_avg['day']), max(daily_avg['day']))\n",
     "plt.ylabel(\"average spend/customer (₳)\")\n",
     "plt.title(\"Monthly Average Revenue per Customer\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "536f2392",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "<br>\n",
+    "<br>"
    ]
   },
   {
@@ -744,6 +801,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b7d6ceb2",
+   "metadata": {},
+   "source": [
+    "<br><br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8eed7fc4",
    "metadata": {},
    "source": [
@@ -824,6 +889,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fb926984",
+   "metadata": {},
+   "source": [
+    "<br><br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2a629def",
    "metadata": {},
    "source": [
@@ -882,6 +955,14 @@
     "Most customers' average baskets fall within a 'typical range' from -$8.94 (the lower whisker, a curious detail indicating potential returns or heavy discounts that requires further investigation) up to $95.00 (the upper whisker).\n",
     "\n",
     "This plot clearly outlines the common ground for customer spending, helping us understand the range of typical user engagement and spot those 'outliers' who diverge from the norm."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8324b78b",
+   "metadata": {},
+   "source": [
+    "<br><br>"
    ]
   },
   {
@@ -959,12 +1040,21 @@
   },
   {
    "cell_type": "markdown",
+   "id": "516762c3",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "<br><br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2fd8c79b",
    "metadata": {},
    "source": [
-    "### Profiling Our Suspects: The RFM Dossiers\n",
+    "## Profiling Our Suspects: The RFM Dossiers\n",
     "\n",
-    "What is RFM?\n",
+    "### What is RFM?\n",
     "\n",
     "To truly understand our customer base, we've created detailed 'dossiers' for each individual using the RFM method:\n",
     "\n",
@@ -1066,6 +1156,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1171058b",
+   "metadata": {},
+   "source": [
+    "<br><br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e8670daa",
    "metadata": {},
    "source": [
@@ -1122,6 +1220,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a8dc99ca",
+   "metadata": {},
+   "source": [
+    "<br><br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c24af88f",
    "metadata": {},
    "source": [
@@ -1152,6 +1258,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e3fc2d9c",
+   "metadata": {},
+   "source": [
+    "<br><br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "27c97162",
    "metadata": {},
    "source": [
@@ -1163,6 +1277,12 @@
     "\n",
     "Finally, we display this data on a **cluster map**. Each point on this map represents a customer, and their assigned 'cluster label' (the color) instantly reveals which segment they belong to. It's a powerful visual, allowing us to see at a glance where our 'Champions' gather, where the 'At Risk' customers might be clustered, and the general landscape of our customer city. This map is the culminating piece of evidence, clarifying the relationships between our diverse customer archetypes."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c9c0ef3",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1247,6 +1367,25 @@
     "plt.legend(title='Cluster Label', bbox_to_anchor=(1.05, 1), loc='upper left')\n",
     "plt.grid(True)\n",
     "plt.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e74d2771",
+   "metadata": {},
+   "source": [
+    "## Case Closed (For Now): Our Key Findings and Next Steps\n",
+    "\n",
+    "Through this meticulous investigation, we've successfully pieced together a comprehensive understanding of online shopping behavior. From tracking the initial 'digital footprints' of customers to profiling their distinct 'spending habits' and even categorizing them into 'archetypes,' our data detective work has illuminated crucial insights.\n",
+    "\n",
+    "We've uncovered:\n",
+    "\n",
+    "- The true scale of customer interactions and the dominance of 'views.'\n",
+    "- The seasonal and daily 'rhythms' of our customer base, revealing peak activity periods.\n",
+    "- The typical 'value' of products and user transactions, complete with unusual outliers.\n",
+    "- And finally, the hidden 'segments' within our customer population, allowing us to identify 'Champions,' 'Loyal Customers,' 'At-Risk' individuals, and 'New Recruits.'\n",
+    "\n",
+    "This case file, now thoroughly documented, provides the solid intelligence needed to inform strategic decisions. But like any good mystery, new questions always arise. This analysis provides the groundwork, the irrefutable evidence, for future investigations – perhaps exploring what drives 'cart abandonment,' predicting future purchases, or personalizing customer experiences even further. The clues are always there; we just need to keep our magnifying glass ready for the next case!"
    ]
   }
  ],
