--- a/src/DataScientist-1.ipynb
+++ b/src/DataScientist-1.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 185,
    "id": "44316db4",
    "metadata": {},
    "outputs": [
@@ -76,14 +76,14 @@
     "\n",
     "With our methodology clear, let's officially open the case. Our investigation begins by gathering the initial evidence: `Train_case_files.csv` and `Test_new_suspects.csv`. These are our raw intelligence reports.\n",
     "\n",
-    "The `Train_case_files.csv` holds profiles of individuals whose innocence or guilt is already known – our baseline for learning. The `Test_new_suspects.csv` contains profiles of individuals whose status is yet to be determined, awaiting our expert analysis.\n",
+    "The `Train_case_files.csv` holds profiles of individuals whose innocence or guilt is already known – our baseline for learning. The `New_suspects.csv` contains profiles of individuals whose status is yet to be determined, awaiting our expert analysis.\n",
     "\n",
     "Let's quickly review the structure of these initial case files."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 186,
    "id": "be4c65d0",
    "metadata": {},
    "outputs": [
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 187,
    "id": "6c11cad3",
    "metadata": {},
    "outputs": [
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 188,
    "id": "ac603e83",
    "metadata": {},
    "outputs": [
@@ -518,7 +518,7 @@
    "source": [
     "## Visualizing the Connections: A Forensic Map\n",
     "\n",
-    "To make these connections even clearer, we create forensic maps (scatterplots).\n",
+    "To make these connections even clearer, we create **forensic maps** (scatterplots).\n",
     "\n",
     "For attributes like \"Dominance Score\" and \"Anticipation Ability,\" we expect to see distinct clusters for suspects versus innocent individuals.\n",
     "\n",
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 189,
    "id": "d5854d4f",
    "metadata": {},
    "outputs": [
@@ -601,7 +601,7 @@
    "source": [
     "## Preparing Our Evidence: Standardization vs. Normalization\n",
     "\n",
-    "Before we proceed with advanced analytical techniques, our evidence must be prepared uniformly."
+    "Before we proceed with advanced analytical techniques, our evidence must be prepared **uniformly**."
    ]
   },
   {
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 190,
    "id": "006d9217",
    "metadata": {},
    "outputs": [
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 191,
    "id": "762fd2e1",
    "metadata": {},
    "outputs": [
@@ -710,7 +710,7 @@
        "Text(0.5, 1.0, 'Outdoor Skills vs Motor Control by Suspect Status')"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 191,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -797,7 +797,7 @@
     "\n",
     "Our initial forensic work—meticulously preparing evidence and identifying key clues—lays a strong foundation.\n",
     "\n",
-    "The immediate next phase of our investigation involves building and training our 'detective agents': sophisticated models designed to directly analyze these profiles.\n",
+    "The immediate next phase of our investigation involves building and training our **'detective agents'**: sophisticated models designed to directly analyze these profiles.\n",
     "\n",
     "In future reports, these agents will prove their capability to definitively tell a criminal from an innocent, advancing justice through data."
    ]
