--- a/src/DataScientist-1.ipynb
+++ b/src/DataScientist-1.ipynb
@@ -5,28 +5,57 @@
    "id": "de90136b",
    "metadata": {},
    "source": [
-    "# The Case of the Elusive Suspect: A Data Scientist's Forensic Handbook\n",
+    "# **The Case of the Elusive Suspect**  \n",
+    "### *A Forensic Notebook from the Data Underworld*\n",
     "\n",
-    "Every crime leaves a trail, a series of digital breadcrumbs that only a keen eye—and powerful data tools—can decipher.\n",
+    "Every case starts the same — with patterns. Hidden habits. Quiet routines. Numbers that, on their own, don’t mean much. But line them up just right, and suddenly you see it — a shape in the noise, a shadow in the trend.\n",
     "\n",
-    "Our mission: to sift through human behaviors and uncover the tell-tale signs that mark individuals as **suspects**, distinguishing them from the **innocent** or confirming their **guilt**.\n",
+    "Our work isn’t about catching a typo or spotting a fluke. It’s about reading behavior like a seasoned cop reads a suspect — not just what they say, but how often, when, and to whom.\n",
     "\n",
-    "This isn't just about numbers; it's about justice.\n",
+    "We train on the past to predict the present. Because in a world built on data, guilt has a signature.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0fe4c269",
+   "metadata": {},
+   "source": [
+    "### **The Detective's Toolkit: Prepping the Case**\n",
     "\n",
+    "Before any gumshoe takes on a case, they sharpen their tools and get a feel for the scene. Same goes for us. You don’t just crack open a case file — you study it, pull it apart, and let the details do the talking.\n",
+    "\n",
+    "The essentials? We’ve got three main leads:\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4dedee4c",
+   "metadata": {},
+   "source": [
+    "- **`Train_case_files.csv`** — our database of familiar faces. This is where the model learns the ropes — stumbles a bit, finds its footing, and starts to recognize the patterns that matter.  \n",
+    "- **`Validation_case_files.csv`** — the quiet room in the back. We use it mid-training, not to teach, but to keep things in check. Make sure the model’s not just memorizing answers, but starting to think for itself.  \n",
+    "- **`New_suspects.csv`** — the wild unknown. No names. No labels. Just raw behavior and a question hanging in the air: who’s who?\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e9a44af",
+   "metadata": {},
+   "source": [
+    "From the full case archive, we slice off 80%. That becomes our `Train_case_files.csv` — the rough streets where the model earns its badge. The remaining 20%? That’s `Validation_case_files.csv`, our internal check. Not for training — for keeping the detective honest. Making sure it's learning the patterns, not just memorizing the faces.\n",
+    "\n",
+    "It’s not enough to remember names — the model’s got to understand the story behind the numbers. That’s how you know it’s learning, not just parroting back what it saw.\n",
+    "\n",
+    "Still, the real challenge comes later. When **`New_suspects.csv`** hits the desk — fresh cases, no labels, no training wheels. That’s when you find out if all that prep work paid off.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2bd1cae4",
+   "metadata": {},
+   "source": [
     "---\n",
-    "<br><br>\n",
-    "\n",
-    "## The Detective's Toolkit: Preparing for the Investigation\n",
-    "\n",
-    "Before we even look at a single suspect profile, a seasoned detective knows the importance of preparing their tools and understanding their methodology. This is where our 'toolkit' comes into play, ensuring our investigation is thorough, fair, and reliable.\n",
-    "\n",
-    "Think of our main body of evidence, say `Train_case_files.csv`. We can't just throw all of it at our analytical 'brain' at once. We strategically divide it into three crucial piles:\n",
-    "\n",
-    "* **Training Set (The Detective's Academy):** This is the biggest pile of our known case files. Our detective-in-training will meticulously study every detail here – every behavior, every nuance of past suspects. It's where our analytical brain learns to recognize the patterns of guilt and innocence, building its core knowledge base.\n",
-    "\n",
-    "* **Validation Set (The Practice Drills):** This is a smaller, secret stash of cases that our detective *hasn't* seen during their formal 'Academy' training. We use this pile for regular practice drills and fine-tuning. Imagine giving our detective a pop quiz. If they struggle here, we adjust their training methods. We often set aside about **20%** of our `Train_case_files.csv` for this (an **80/20 split**). This is super important, especially if we don't have millions of cases. Why? To prevent **overtraining**. An overtrained detective is like someone who's only memorized a textbook – they're brilliant on the specific questions they've seen, but totally lost when a new, slightly different case comes along. The validation set ensures our detective learns to generalize, not just memorize, making them truly smart, not just parrots.\n",
-    "\n",
-    "* **Testing Set (The Grand Jury Trial):** This is our most precious, untouched pile of evidence, perhaps `New_suspects.csv`. Our detective will *never* see this data during training or practice. This is the ultimate, real-world test. Once our detective is fully trained and validated, we present these truly unknown cases to see how well they perform. This gives us an honest, unbiased verdict on their ability to solve new mysteries.\n"
+    "<br><br>"
    ]
   },
   {
