Fully finished detective narrative, made by human 100%

--- a/src/DataScientist-1.ipynb
+++ b/src/DataScientist-1.ipynb
@@ -20,7 +20,7 @@
    "id": "0fe4c269",
    "metadata": {},
    "source": [
-    "### **The Detective's Toolkit: Prepping the Case**\n",
+    "### **Prepping the Case**\n",
     "\n",
     "Before any gumshoe takes on a case, they sharpen their tools and get a feel for the scene. Same goes for us. You don’t just crack open a case file — you study it, pull it apart, and let the details do the talking.\n",
     "\n",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 195,
    "id": "44316db4",
    "metadata": {},
    "outputs": [
@@ -101,18 +101,21 @@
    "id": "04ece239",
    "metadata": {},
    "source": [
-    "## The Case Files: Gathering Our Evidence\n",
+    "## **Gathering Our Evidence**\n",
     "\n",
-    "With our methodology clear, let's officially open the case. Our investigation begins by gathering the initial evidence: `Train_case_files.csv` and `Test_new_suspects.csv`. These are our raw intelligence reports.\n",
+    "The groundwork’s laid. Time to pop the lid and see what we’re dealing with.\n",
     "\n",
-    "The `Train_case_files.csv` holds profiles of individuals whose innocence or guilt is already known – our baseline for learning. The `New_suspects.csv` contains profiles of individuals whose status is yet to be determined, awaiting our expert analysis.\n",
+    "We start with two case files:\n",
     "\n",
-    "Let's quickly review the structure of these initial case files."
+    "- `Train_case_files.csv`\n",
+    "- `New_suspects.csv`\n",
+    "\n",
+    "Before we start drawing conclusions, we need to know what shape they’re in. Columns, counts, types — the usual sweep. Let’s take a look.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 196,
    "id": "be4c65d0",
    "metadata": {},
    "outputs": [
@@ -307,7 +310,7 @@
    "id": "74c61b43",
    "metadata": {},
    "source": [
-    "## Unveiling the Attributes: What Defines a Suspect?"
+    "## **Profiling the Perps**"
    ]
   },
   {
@@ -315,16 +318,14 @@
    "id": "a0c1dd3c",
    "metadata": {},
    "source": [
-    "Our first deep dive involves examining the individual 'characteristics' or 'attributes' recorded for each person.\n",
+    "First step in any case? Get to know your suspects. Not names — traits. Height, habits, tells they can’t hide. We size ’em up one variable at a time, watching how each one behaves across the board.\n",
     "\n",
-    "These are the clues in their profile, like a forensic psychologist's observations.\n",
-    "\n",
-    "We plot each attribute to see how it's distributed: first, overall for everyone, and then specifically comparing **'Guilty/Suspect' individuals (red)** versus **'Innocent' individuals (blue)**."
+    "We draw the lines. **Red for the Guilty. Blue for the Innocent.** Then we watch the patterns dance."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 197,
    "id": "6c11cad3",
    "metadata": {},
    "outputs": [
@@ -421,11 +422,11 @@
    "id": "4b0c7713",
    "metadata": {},
    "source": [
-    "By looking at these visual patterns, we can start to spot which clues truly differentiate a suspect from an innocent person, and which ones are just too mixed to be useful.\n",
+    "Some traits? They’re **noise**. Dead ends. Red and blue blending like smoke in a back alley. BMI, Outdoor Skills, Balance, Motor Control, Genetic Marker Score — all of 'em muddied and overlapping. Like shoe prints in the rain. Useless when you’re chasing a ghost.\n",
     "\n",
-    "For example, attributes like \"Body Mass Index,\" \"Outdoor Skills,\" \"Balance,\" \"Motor Control,\" and \"Genetic Marker Score\" often show distributions that are heavily overlapped. It's like finding generic shoe prints at a crime scene – they don't tell us much about our specific culprit.\n",
+    "But then, you find a **clean cut**. An attribute that splits like a knife — one side red, the other blue. That’s not just a number. That’s a fingerprint. A trail left behind by someone who thought they were careful. Thought wrong.\n",
     "\n",
-    "In contrast, other attributes show much clearer distinctions. These are the 'fingerprints' left behind."
+    "We’re not jumping to conclusions. Not yet. But the lines are forming. The suspects are starting to separate themselves — and we’re watching."
    ]
   },
   {
@@ -433,7 +434,7 @@
    "id": "ad53b5b1",
    "metadata": {},
    "source": [
-    "### The Smoking Gun: Quantifying Attribute Correlation"
+    "### Whispers in the Ledger"
    ]
   },
   {
@@ -441,26 +442,18 @@
    "id": "df45929d",
    "metadata": {},
    "source": [
-    "A top detective doesn't just eyeball the evidence; they quantify it.\n",
+    "You can stare at patterns 'til your eyes go foggy, but if you want the truth, you’ve got to run the numbers. Cold. Hard.\n",
     "\n",
-    "We calculate the **correlation** of each attribute with our ultimate target: being a 'suspect' (guilty or likely involved).\n",
+    "So that’s what we do. Each trait gets lined up against the only label that matters: suspect or not. No maybes. No excuses.\n",
     "\n",
-    "This tells us how strongly each piece of evidence is linked to their status."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3d69e179",
-   "metadata": {},
-   "source": [
-    "After calculating these correlations, we meticulously **sort them by strength**, with the strongest links at the top. These top correlations are our **'smoking guns'** – the attributes that give us the clearest indication of guilt or innocence.\n",
+    "That’s correlation — the silent conversation between data and guilt. Some attributes barely mutter. Others? They scream.\n",
     "\n",
-    "Here's what our analysis of your updated data reveals, showing the most significant correlations first:"
+    "We rank them by how loud they talk. The quiet ones drop to the bottom — distractions, dead ends. But the ones at the top? They’ve got weight. The kind of weight that tips scales and seals fates."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 198,
    "id": "ac603e83",
    "metadata": {},
    "outputs": [
@@ -545,18 +538,18 @@
    "id": "15cfd917",
    "metadata": {},
    "source": [
-    "## Visualizing the Connections: A Forensic Map\n",
+    "## **Points of Suspicion: Scatterplots**\n",
     "\n",
-    "To make these connections even clearer, we create **forensic maps** (scatterplots).\n",
+    "Once you’ve got your suspects and your signals, it’s time to map the scene. Not with red string and corkboards — with scatterplots. Forensic maps, drawn in pixels instead of pencil.\n",
     "\n",
-    "For attributes like \"Dominance Score\" and \"Anticipation Ability,\" we expect to see distinct clusters for suspects versus innocent individuals.\n",
+    "Some pairings light up like neon signs — like **Dominance Score** versus **Anticipation Ability**. You can see it plain as day: clusters forming, suspects peeling off from the innocents. Patterns that don’t just suggest — they accuse.\n",
     "\n",
-    "In contrast, plots for \"Body Mass Index\" or \"Outdoor Skills\" would show heavily mixed distributions, confirming their low correlation and limited investigative value."
+    "Others? A waste of ink. **BMI**, **Outdoor Skills** — noise. Clusters smeared together, no rhyme, no reason. Just static. The kind of data that gets your case thrown out."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 199,
    "id": "d5854d4f",
    "metadata": {},
    "outputs": [
@@ -605,13 +598,11 @@
    "id": "be0048bc",
    "metadata": {},
    "source": [
-    "### Verifying Our Findings: Insights from the Testing Data\n",
+    "But no good detective stops at a hunch — even a quantified one. So we pull the testing files. Unlabeled, untouched. Fresh off the street.\n",
     "\n",
-    "After identifying strong leads from our training data, a good detective always verifies.\n",
+    "The last two plots — green as a streetlight at midnight — show how those high-correlation traits hold up when the names are blacked out. No training data. No safety net.\n",
     "\n",
-    "The two plots at the bottom, displayed in a sole green color, represent data from the testing case files, 'New_suspects.csv'.\n",
-    "\n",
-    "By looking at these correlations in unseen profiles, we ensure our findings aren't just quirks of our initial evidence, but truly generalizable traits that can identify suspects in new cases."
+    "If the patterns still stand, that’s not coincidence. That’s a lead you can trust."
    ]
   },
   {
@@ -628,9 +619,11 @@
    "id": "8d7d6267",
    "metadata": {},
    "source": [
-    "## Preparing Our Evidence: Standardization vs. Normalization\n",
+    "## **Cleaning the Evidence**\n",
     "\n",
-    "Before we proceed with advanced analytical techniques, our evidence must be prepared **uniformly**."
+    "Before you take anything to court, you’ve got to prep it right. Raw evidence? It’s messy. Inconsistent. Dangerous. You don’t just slap it on the table and hope the jury sees the truth — you clean it, calibrate it, make sure it all stacks up fair.\n",
+    "\n",
+    "Two methods. Two philosophies. Both get the job done — but in different ways."
    ]
   },
   {
@@ -638,13 +631,13 @@
    "id": "72eecfbd",
    "metadata": {},
    "source": [
-    "### Standardization: Leveling the Playing Field\n",
+    "### Standardization: Leveling the Street\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 200,
    "id": "006d9217",
    "metadata": {},
    "outputs": [
@@ -707,15 +700,11 @@
    "id": "1d00b321",
    "metadata": {},
    "source": [
-    "Evidence comes in varied scales.\n",
+    "Not all clues walk in wearing the same shoes. Some come loud — high numbers, big swings. Others whisper — subtle and soft.\n",
     "\n",
-    "Standardization transforms attributes so they have a mean of 0 and a standard deviation of 1. \n",
+    "**Standardization** pulls them onto even ground. Re-centers the evidence so it’s got a **mean of zero**, a **standard deviation** of one. You’re not changing the story — just adjusting the volume so no one clue drowns out the others.\n",
     "\n",
-    "This is like putting all our clues into a standard measuring cup.\n",
-    "\n",
-    "If you then plot these, you'd typically see values ranging consistently from about -2 to 3 on both axes.\n",
-    "\n",
-    "This ensures every clue is weighted fairly, preventing larger numbers from unfairly dominating our forensic tools.\n",
+    "Plot it, and you’ll see the scene stabilize — most of the action sitting clean between -2 and 3. Nothing too loud. Nothing lost in the shadows.\n",
     "<br>"
    ]
   },
@@ -724,12 +713,12 @@
    "id": "38c4227b",
    "metadata": {},
    "source": [
-    "### Normalization: Fitting to a Blueprint\n"
+    "### Normalization: Locking It Down\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 201,
    "id": "762fd2e1",
    "metadata": {},
    "outputs": [
@@ -739,7 +728,7 @@
        "Text(0.5, 1.0, 'Outdoor Skills vs Motor Control by Suspect Status')"
       ]
      },
-     "execution_count": 191,
+     "execution_count": 201,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -801,11 +790,11 @@
    "id": "58a36556",
    "metadata": {},
    "source": [
-    "Normalization is another method, scaling attributes to a fixed range, typically 0 to 1.\n",
+    "Sometimes, you need tighter control. Rules. Boundaries. No exceptions.\n",
     "\n",
-    "This is like fitting every clue precisely into a predefined slot in our evidence locker.\n",
+    "**Normalization** fits each clue into a tight range — usually 0 to 1. Like tagging and bagging every piece of evidence, putting it into a labeled slot in the locker.\n",
     "\n",
-    "This is vital for certain analytical tools that prefer inputs within strict boundaries, ensuring all evidence is presented in a consistent, controlled format for accurate analysis."
+    "It’s not about fairness — it’s about **precision**. Some tools demand that kind of order. And when they do, you make sure the data’s boxed up, sealed, and ready for the spotlight."
    ]
   },
   {
@@ -822,13 +811,15 @@
    "id": "0d233efb",
    "metadata": {},
    "source": [
-    "## Conclusion: The Pursuit of Truth and What Comes Next\n",
+    "## **Closing the Case... For Now**\n",
     "\n",
-    "Our initial forensic work—meticulously preparing evidence and identifying key clues—lays a strong foundation.\n",
+    "We’ve done the legwork. Dug through the shadows, cleaned the evidence, and pinned down the clues that matter.\n",
     "\n",
-    "The immediate next phase of our investigation involves building and training our **'detective agents'**: sophisticated models designed to directly analyze these profiles.\n",
+    "But the case isn’t closed yet. This was just the stakeout.\n",
     "\n",
-    "In future reports, these agents will prove their capability to definitively tell a criminal from an innocent, advancing justice through data."
+    "Next up: calling in the heavy hitters — our detective agents. These models don’t guess. They don’t speculate. They hunt. They analyze. They separate the guilty from the innocent with cold precision.\n",
+    "\n",
+    "In the chapters to come, these agents will carry the torch, turning whispers into verdicts. And justice — data-driven and unflinching — will finally get its day in court."
    ]
   }
  ],
