More human storytelling and more noir rework v2

--- a/src/DataScientist-1.ipynb
+++ b/src/DataScientist-1.ipynb
@@ -6,13 +6,13 @@
    "metadata": {},
    "source": [
     "# **The Case of the Elusive Suspect**  \n",
-    "### *A Forensic Notebook from the Data Underworld*\n",
+    "### *Notes from the Data Underground*\n",
     "\n",
-    "Every case starts the same — with patterns. Hidden habits. Quiet routines. Numbers that, on their own, don’t mean much. But line them up just right, and suddenly you see it — a shape in the noise, a shadow in the trend.\n",
+    "Every case kicks off the same way — with **patterns**. Quiet habits. Little routines hiding in plain sight. Numbers that, on their own, don’t scream guilty. But line ’em up just right, and suddenly a shape emerges out of the noise.\n",
     "\n",
-    "Our work isn’t about catching a typo or spotting a fluke. It’s about reading behavior like a seasoned cop reads a suspect — not just what they say, but how often, when, and to whom.\n",
+    "This job? It ain’t about catching typos or balancing books. We’re profilers. Names don’t mean much — it’s the numbers behind the names that tell the story. How a suspect moves, how they react, lie, snap.\n",
     "\n",
-    "We train on the past to predict the present. Because in a world built on data, guilt has a signature.\n"
+    "Each stat? It’s a tick on their psychological polygraph. You don’t tail ’em through alleys — you chase their traits through **scatterplots** and **correlation scores**. Because guilt... It doesn’t always show on the surface, but it hides in their stress recovery, their manipulation score, their stubborn refusal to play by the rules. The numbers don’t lie — you just gotta know how to read ’em.\n"
    ]
   },
   {
@@ -22,7 +22,7 @@
    "source": [
     "### **Prepping the Case**\n",
     "\n",
-    "Before any gumshoe takes on a case, they sharpen their tools and get a feel for the scene. Same goes for us. You don’t just crack open a case file — you study it, pull it apart, and let the details do the talking.\n",
+    "Every detective knows you don’t just waltz into a case blind. You sharpen your tools, get a feel for the scene — sniff out the details before making a move. We do the same. You don’t just open a file — you dissect it, let the clues speak.\n",
     "\n",
     "The essentials? We’ve got three main leads:\n"
    ]
@@ -42,7 +42,7 @@
    "id": "2e9a44af",
    "metadata": {},
    "source": [
-    "From the full case archive, we slice off 80%. That becomes our `Train_case_files.csv` — the rough streets where the model earns its badge. The remaining 20%? That’s `Validation_case_files.csv`, our internal check. Not for training — for keeping the detective honest. Making sure it's learning the patterns, not just memorizing the faces.\n",
+    "From the **full case archive**, we slice off 80%. That becomes our `Train_case_files.csv` — the rough streets where the model earns its badge. The remaining 20%? That’s `Validation_case_files.csv`, our internal check. Not for training — for keeping the detective honest. Making sure it's learning the patterns, not just memorizing the faces.\n",
     "\n",
     "It’s not enough to remember names — the model’s got to understand the story behind the numbers. That’s how you know it’s learning, not just parroting back what it saw.\n",
     "\n",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 202,
    "id": "44316db4",
    "metadata": {},
    "outputs": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 203,
    "id": "be4c65d0",
    "metadata": {},
    "outputs": [
@@ -318,14 +318,14 @@
    "id": "a0c1dd3c",
    "metadata": {},
    "source": [
-    "First step in any case? Get to know your suspects. Not names — traits. Height, habits, tells they can’t hide. We size ’em up one variable at a time, watching how each one behaves across the board.\n",
+    "First step in any case? Get to know your suspects. Not their names — but their tells. The kind of traits they don’t even realize they’re leaking. You size ’em up, one variable at a time...\n",
     "\n",
-    "We draw the lines. **Red for the Guilty. Blue for the Innocent.** Then we watch the patterns dance."
+    "We lay it out. **Red for the guilty**. **Blue for the innocent**. Then we watch the scatterplots breathe."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 204,
    "id": "6c11cad3",
    "metadata": {},
    "outputs": [
@@ -422,11 +422,11 @@
    "id": "4b0c7713",
    "metadata": {},
    "source": [
-    "Some traits? They’re **noise**. Dead ends. Red and blue blending like smoke in a back alley. BMI, Outdoor Skills, Balance, Motor Control, Genetic Marker Score — all of 'em muddied and overlapping. Like shoe prints in the rain. Useless when you’re chasing a ghost.\n",
+    "Some traits? Pure noise. **BMI, Outdoor Skills, Balance, Motor Control, Genetic Marker Score** — all of ’em blur together like fogged-up glass on a rainy stakeout. You could stare for hours and still walk away with nothing but a headache.\n",
     "\n",
-    "But then, you find a **clean cut**. An attribute that splits like a knife — one side red, the other blue. That’s not just a number. That’s a fingerprint. A trail left behind by someone who thought they were careful. Thought wrong.\n",
+    "But some? They cut sharp. **Dominance Score, Anticipation Ability, Substance History** — you see a split, a fracture line. One side red. One side blue. That’s a fingerprint in the dust.\n",
     "\n",
-    "We’re not jumping to conclusions. Not yet. But the lines are forming. The suspects are starting to separate themselves — and we’re watching."
+    "We’re not calling the shots yet. But the separation’s there, clear as a boot print in fresh snow. And we’re always watching."
    ]
   },
   {
@@ -442,18 +442,18 @@
    "id": "df45929d",
    "metadata": {},
    "source": [
-    "You can stare at patterns 'til your eyes go foggy, but if you want the truth, you’ve got to run the numbers. Cold. Hard.\n",
+    "You want answers, you don’t beg for them — you squeeze ‘em out of the numbers.\n",
     "\n",
-    "So that’s what we do. Each trait gets lined up against the only label that matters: suspect or not. No maybes. No excuses.\n",
+    "Every trait gets lined up against guilt like suspects in a dirty lineup. No guesswork. Just cold correlation.\n",
     "\n",
-    "That’s correlation — the silent conversation between data and guilt. Some attributes barely mutter. Others? They scream.\n",
+    "Some stay silent. Some crack under pressure.\n",
     "\n",
-    "We rank them by how loud they talk. The quiet ones drop to the bottom — distractions, dead ends. But the ones at the top? They’ve got weight. The kind of weight that tips scales and seals fates."
+    "And when the data talks…"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 205,
    "id": "ac603e83",
    "metadata": {},
    "outputs": [
@@ -540,16 +540,12 @@
    "source": [
     "## **Points of Suspicion: Scatterplots**\n",
     "\n",
-    "Once you’ve got your suspects and your signals, it’s time to map the scene. Not with red string and corkboards — with scatterplots. Forensic maps, drawn in pixels instead of pencil.\n",
-    "\n",
-    "Some pairings light up like neon signs — like **Dominance Score** versus **Anticipation Ability**. You can see it plain as day: clusters forming, suspects peeling off from the innocents. Patterns that don’t just suggest — they accuse.\n",
-    "\n",
-    "Others? A waste of ink. **BMI**, **Outdoor Skills** — noise. Clusters smeared together, no rhyme, no reason. Just static. The kind of data that gets your case thrown out."
+    "Once you've got your suspects and your signals, you chart the scene. Not with thumbtacks and yarn — with scatterplots. Digital crime scenes, every dot a soul."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 206,
    "id": "d5854d4f",
    "metadata": {},
    "outputs": [
@@ -598,11 +594,14 @@
    "id": "be0048bc",
    "metadata": {},
    "source": [
-    "But no good detective stops at a hunch — even a quantified one. So we pull the testing files. Unlabeled, untouched. Fresh off the street.\n",
+    "Some combos light up the board — like **Dominance Score** versus **Substance History**. Clusters form. Guilt pulls away from innocence like oil in water. It doesn’t hint — it accuses.\n",
     "\n",
-    "The last two plots — green as a streetlight at midnight — show how those high-correlation traits hold up when the names are blacked out. No training data. No safety net.\n",
+    "Others? A waste of ink. **Outdoor SKills**, **Motor Control** — noise. a smear of dots going nowhere. Static. The kind of mess that gets cases tossed before they hit the desk.\n",
     "\n",
-    "If the patterns still stand, that’s not coincidence. That’s a lead you can trust."
+    "But a real detective doesn’t stop at patterns. You **test** 'em. You blindfold the data — no names, no past — and see if it still talks.\n",
+    "\n",
+    "Those last two plots? Green and silent. But if the split still shows...\n",
+    "you’ve got something real."
    ]
   },
   {
@@ -621,9 +620,9 @@
    "source": [
     "## **Cleaning the Evidence**\n",
     "\n",
-    "Before you take anything to court, you’ve got to prep it right. Raw evidence? It’s messy. Inconsistent. Dangerous. You don’t just slap it on the table and hope the jury sees the truth — you clean it, calibrate it, make sure it all stacks up fair.\n",
+    "Before you take anything to court, you’ve got to prep it right. Raw evidence? It’s messy. Inconsistent... You don’t just slap it on the table and hope the jury sees the truth — you clean it, calibrate it, make sure it all stacks up fair.\n",
     "\n",
-    "Two methods. Two philosophies. Both get the job done — but in different ways."
+    "Two methods. Both get the job done — but in different ways."
    ]
   },
   {
@@ -637,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 207,
    "id": "006d9217",
    "metadata": {},
    "outputs": [
@@ -700,12 +699,12 @@
    "id": "1d00b321",
    "metadata": {},
    "source": [
-    "Not all clues walk in wearing the same shoes. Some come loud — high numbers, big swings. Others whisper — subtle and soft.\n",
+    "Some traits shout. Others mutter. Doesn’t mean they’re wrong — just uneven.\n",
     "\n",
-    "**Standardization** pulls them onto even ground. Re-centers the evidence so it’s got a **mean of zero**, a **standard deviation** of one. You’re not changing the story — just adjusting the volume so no one clue drowns out the others.\n",
+    "**Standardization** brings them to the same curb. **Zero mean**. **One standard deviation**. Evens out the noise so no brute overshadows a subtle tell.\n",
     "\n",
-    "Plot it, and you’ll see the scene stabilize — most of the action sitting clean between -2 and 3. Nothing too loud. Nothing lost in the shadows.\n",
-    "<br>"
+    "After that, the plot calms down — most values land smooth between -2 and 3.\n",
+    "Clean. Balanced. Ready for trial."
    ]
   },
   {
@@ -718,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 208,
    "id": "762fd2e1",
    "metadata": {},
    "outputs": [
@@ -728,7 +727,7 @@
        "Text(0.5, 1.0, 'Outdoor Skills vs Motor Control by Suspect Status')"
       ]
      },
-     "execution_count": 201,
+     "execution_count": 208,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -790,11 +789,11 @@
    "id": "58a36556",
    "metadata": {},
    "source": [
-    "Sometimes, you need tighter control. Rules. Boundaries. No exceptions.\n",
+    "Sometimes, you need tighter control. No gray areas. Just order.\n",
     "\n",
-    "**Normalization** fits each clue into a tight range — usually 0 to 1. Like tagging and bagging every piece of evidence, putting it into a labeled slot in the locker.\n",
+    "**Normalization** squeezes every clue into a tight frame — 0 to 1. Like tagging evidence and snapping the lock on the box.\n",
     "\n",
-    "It’s not about fairness — it’s about **precision**. Some tools demand that kind of order. And when they do, you make sure the data’s boxed up, sealed, and ready for the spotlight."
+    "It’s not about fairness — it’s about **control**. Some tools demand that kind of order. And when they do, you make sure the data’s sealed and ready for the spotlight."
    ]
   },
   {
@@ -817,9 +816,15 @@
     "\n",
     "But the case isn’t closed yet. This was just the stakeout.\n",
     "\n",
-    "Next up: calling in the heavy hitters — our detective agents. These models don’t guess. They don’t speculate. They hunt. They analyze. They separate the guilty from the innocent with cold precision.\n",
-    "\n",
-    "In the chapters to come, these agents will carry the torch, turning whispers into verdicts. And justice — data-driven and unflinching — will finally get its day in court."
+    "Next up, we train our detective agents on the streets they know — the training data. We’ll see what they’re really made of, push their limits, and learn fresh ways to read the signs."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec527e95",
+   "metadata": {},
+   "source": [
+    "---\n"
    ]
   }
  ],
